--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,10 @@
-:root {
-    font-family: 'Miriam Libre', sans-serif;
-    /* font-family: 'Raleway', sans-serif; */
+
+
+
+.App {
+    /* font-family: 'Miriam Libre', sans-serif; */
+    font-family: 'Raleway', sans-serif;
+    
+    
+
 }
