Iterate over forecast data to produce 5 cards with weather icon, and high and low temperatures

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -19,7 +19,8 @@
     /* font-family: 'Miriam Libre', sans-serif; */
     font-family: 'Raleway', sans-serif;
     
-    
+    display: flex;
+    align-items: flex-start;
     
     
 
