--- a/frontend/src/components/Card/style.scss
+++ b/frontend/src/components/Card/style.scss
@@ -15,13 +15,16 @@
 }
     
 .card {
-    margin-top: 20px;
+    margin-top: 50px;
+    margin-right: 10px;
     width: 200px;
     height: 320px;
     border-radius: 5px;
     border: 2px solid rgba(194, 236, 236, .3);
-    
+    background-color: rgba(255, 236, 236, .6);   
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
 }
+
 
 #cardRegion {
   margin-left: 15px;
@@ -46,4 +49,26 @@
   font-size: 5em;
   filter: drop-shadow(0 0 0.75rem white);
   
+}
+
+#maxtemp, #mintemp {
+  font-family: 'Miriam Libre', sans-serif;
+  color: rgba(5, 5, 5, .5);
+  margin-top: 0px;
+  font-size: 2em;
+  filter: drop-shadow(0 0 0.75rem white);
+  display: inline;
+}
+
+#maxtemp {
+  margin-left: 55px;
+  margin-right: 15px;
+  color: red;
+  filter: drop-shadow(0 -2mm 4mm rgb(255, 11, 11));
+}
+
+#mintemp {
+  
+  color: blue;
+  filter: drop-shadow(0 -2mm 4mm rgb(25, 0, 255));
 }
