--- a/frontend/src/components/Search/style.css
+++ b/frontend/src/components/Search/style.css
@@ -1,11 +1,16 @@
 label {
-    margin-left: 15px;
-    margin-right: 10px;
-    
+    margin-left: 5px;
+    margin-right: 10px;    
     font-weight: 600;
 }
 
 input {
     border-radius: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
+}
+
+label, input {
+    display: block;
+    position: absolute;
+    
 }
