--- a/frontend/src/components/Card/style.scss
+++ b/frontend/src/components/Card/style.scss
@@ -13,7 +13,16 @@
 @mixin for-big-desktop-up {
   @media (min-width: 1800px) { @content ;}
 }
-    
+   
+hr {
+  width: 80%;
+  margin-top: -2px;
+  margin-bottom: 15px;
+  border: 0;
+  height: 3px;
+  background-color: rgba(86, 151, 180, 0.329);
+}
+
 .card {
     margin-top: 50px;
     margin-right: 10px;
@@ -31,9 +40,10 @@
   margin-top: -20px;
 }
 
-#cardCity, #cardRegion {
-  margin-left: 25px;
-  color: rgba(5, 5, 5, .5);
+#dayOfTheWeek {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 2.5em;
 }
 
 #icon {
@@ -44,6 +54,7 @@
 
 #condition {
   text-align: center;
+  margin-top: -2px;
 }
 
 #temp {
@@ -52,28 +63,44 @@
   margin-top: 0px;  
   text-align: center;
   font-size: 5em;
-  filter: drop-shadow(0 0 0.75rem white);
-  
+  filter: drop-shadow(0 0 0.75rem white);  
 }
 
-#maxtemp, #mintemp {
-  font-family: 'Miriam Libre', sans-serif;
-  color: rgba(5, 5, 5, .5);  
-  font-size: 3em;
-  filter: drop-shadow(0 0 0.75rem white);
-  display: inline;
-  padding: 5px;
-}
 
 #maxtemp {
-  margin-left: 25px;
+  margin-left: 12px;
   margin-right: 15px;
   color: red;
   filter: drop-shadow(0 -2mm 4mm rgb(255, 11, 11));
 }
 
 #mintemp {
-  
   color: blue;
   filter: drop-shadow(0 -2mm 4mm rgb(25, 0, 255));
+}
+
+#maxtemp, #mintemp {
+  font-family: 'Miriam Libre', sans-serif;  
+  font-size: 3em;  
+  display: inline;
+  padding: 5px;
+}
+
+#month {
+  
+  display: inline;
+  margin-right: 5px;
+}
+
+#date {
+  
+  display: inline;
+}
+
+#dateContainer {
+  color: grey;  
+  margin-top: -25px;
+  
+  text-align: center;
+  
 }
