--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -17,11 +17,14 @@
 
 .App {
     /* font-family: 'Miriam Libre', sans-serif; */
-    font-family: 'Raleway', sans-serif;
-    
+    font-family: 'Raleway', sans-serif;    
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
     
-    
+    @include for-big-desktop-up() {
+      width: 1200px;
+      align-items: center;
+    }
 
 }
