--- a/frontend/src/components/Card/style.scss
+++ b/frontend/src/components/Card/style.scss
@@ -24,7 +24,7 @@ hr {
 }
 
 .card {
-    margin-top: 50px;
+    margin-top: 150px;
     margin-right: 10px;
     width: 200px;
     height: 320px;
@@ -32,6 +32,9 @@ hr {
     border: 2px solid rgba(194, 236, 236, .3);
     background-color: rgba(255, 236, 236, .6);   
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
+    padding: 11px;
+    display: block;
+    flex-grow: 5;
 }
 
 
@@ -46,8 +49,32 @@ hr {
   font-size: 2.5em;
 }
 
+#dateContainer {
+  color: grey;  
+  margin-top: -25px;
+  margin-left: .5rem;
+  text-align: center;
+  
+}
+
+#month {
+  
+  display: inline;
+  margin-right: 5px;
+}
+
+#date {
+  
+  display: inline;
+}
+
+#ordinal {
+  display: inline;
+}
+
+
 #icon {
-  margin-left: 50px;
+  margin-left: 4.5rem;
   height: 6em;
   
 }
@@ -68,8 +95,8 @@ hr {
 
 
 #maxtemp {
-  margin-left: 12px;
-  margin-right: 15px;
+  margin-left: 15px;
+  margin-right: 10px;
   color: red;
   filter: drop-shadow(0 -2mm 4mm rgb(255, 11, 11));
 }
@@ -84,23 +111,4 @@ hr {
   font-size: 3em;  
   display: inline;
   padding: 5px;
-}
-
-#month {
-  
-  display: inline;
-  margin-right: 5px;
-}
-
-#date {
-  
-  display: inline;
-}
-
-#dateContainer {
-  color: grey;  
-  margin-top: -25px;
-  
-  text-align: center;
-  
 }
