Install material ui core and icons

--- a/frontend/src/components/Search/style.css
+++ b/frontend/src/components/Search/style.css
@@ -5,7 +5,7 @@ input {
     /* /* margin-right: 19px; */
     margin-top: 92px;
     display: block;
-    
+    right: 1rem;
     position: absolute;
 }
 
