--- a/frontend/src/components/Card/style.scss
+++ b/frontend/src/components/Card/style.scss
@@ -95,8 +95,8 @@ hr {
 
 
 #maxtemp {
-  margin-left: 15px;
-  margin-right: 10px;
+  // margin-left: 15px;
+  // margin-right: 10px;
   color: red;
   filter: drop-shadow(0 -2mm 4mm rgb(255, 11, 11));
 }
@@ -104,6 +104,7 @@ hr {
 #mintemp {
   color: blue;
   filter: drop-shadow(0 -2mm 4mm rgb(25, 0, 255));
+  margin-right: 1.5rem;
 }
 
 #maxtemp, #mintemp {
@@ -111,4 +112,6 @@ hr {
   font-size: 3em;  
   display: inline;
   padding: 5px;
+  margin-left: 2rem;
+  
 }
