Add functional search bar

--- a/frontend/src/components/Search/style.css
+++ b/frontend/src/components/Search/style.css
@@ -9,6 +9,11 @@ input {
     position: absolute;
 }
 
+.searchIcon {
+    position: relative;
+    
+}
+
 .cityName {
     display: inline;
     position: absolute;
